[package]
name = "attackln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.32.0", features = ["fs", "rt", "rt-multi-thread"] }

tonic_lnd = { git = "https://github.com/sr-gi/tonic_lnd", branch="2024-04-attackathon-rpc", features=["lightningrpc", "routerrpc"], package="fedimint-tonic-lnd" }
