[package]
name = "attackln"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.32.0", features = ["fs", "rt", "rt-multi-thread"] }
expanduser = "=1.2.2"
serde = { version="1.0.183", features=["derive"] }
serde_json = "1.0.104"
anyhow = { version = "1.0.69", features = ["backtrace"] }

bitcoin = { version = "0.30.1", features=["serde"] }
lightning = { version = "0.0.121" }
tonic_lnd = { git = "https://github.com/sr-gi/tonic_lnd", branch="2024-04-attackathon-rpc", features=["lightningrpc", "routerrpc"], package="fedimint-tonic-lnd" }